# backend/server.js
@@ -7,13 +7,14 @@ const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("./swagger.json");
 const connectDB = require("./config/db");
 const authRoutes = require("./routers/auth.routes");
-const adminRoutes = require("./routers/admin.routes");
+const studentRoutes = require("./routers/student.routes");
+const bcrypt = require("bcrypt");
 connectDB();
 app.use(cors());
 app.use(express.json());
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use("/api/auth", authRoutes);
-app.use("/api/admin", adminRoutes);
+app.use("/api/students", studentRoutes);
 
 app.get("/", (req, res) => {
   res.redirect("/api-docs");
